# Start_a_cpp_project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
for_test/: CMakeLists.txt  for_test.cpp  for_test.h
hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h
tests/: CMakeLists.txt  test_for_test.cpp  test_hello_world.cpp
